# beeai-framework

./: MAINTAINERS.md  README.md
.githooks/: hook.sh
python/: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
python/beeai_framework/: __init__.py  cancellation.py  context.py  errors.py  logger.py  retryable.py  template.py
python/beeai_framework/adapters/amazon_bedrock/: __init__.py
python/beeai_framework/adapters/anthropic/: __init__.py
python/beeai_framework/adapters/azure_openai/: __init__.py
python/beeai_framework/adapters/groq/: __init__.py
python/beeai_framework/adapters/langchain/: __init__.py  tools.py
python/beeai_framework/adapters/litellm/: __init__.py  _patch.py  chat.py  utils.py
python/beeai_framework/adapters/ollama/: __init__.py
python/beeai_framework/adapters/openai/: __init__.py
python/beeai_framework/adapters/vertexai/: __init__.py
python/beeai_framework/adapters/watsonx/: __init__.py
python/beeai_framework/adapters/xai/: __init__.py
python/beeai_framework/agents/: __init__.py  base.py  errors.py  types.py
python/beeai_framework/agents/bee/: agent.py
python/beeai_framework/agents/react/: __init__.py  agent.py  events.py  types.py
python/beeai_framework/agents/runners/: base.py
python/beeai_framework/agents/tool_calling/: __init__.py  agent.py  events.py  prompts.py  types.py
python/beeai_framework/backend/: __init__.py  chat.py  constants.py  errors.py  events.py  message.py  types.py  utils.py
python/beeai_framework/cache/: __init__.py  base.py  null_cache.py  sliding_cache.py  unconstrained_cache.py
python/beeai_framework/emitter/: __init__.py  emitter.py  errors.py  types.py  utils.py
python/beeai_framework/memory/: __init__.py  base_cache.py  base_memory.py  errors.py  file_cache.py  readonly_memory.py  serializable.py  serializer.py  sliding_cache.py  sliding_memory.py  summarize_memory.py  token_memory.py  unconstrained_cache.py  unconstrained_memory.py
python/beeai_framework/parsers/: field.py  line_prefix.py
python/beeai_framework/tools/: __init__.py  errors.py  events.py  mcp_tools.py  openapi.py  tool.py  types.py
python/beeai_framework/tools/code/: __init__.py  output.py  python.py  sandbox.py  storage.py
python/beeai_framework/tools/mcp/: __init__.py  mcp.py
python/beeai_framework/tools/search/: __init__.py  base.py  duckduckgo.py  wikipedia.py
python/beeai_framework/tools/weather/: __init__.py  openmeteo.py
python/beeai_framework/utils/: __init__.py  asynchronous.py  cancellation.py  cloneable.py  config.py  counter.py  custom_logger.py  dicts.py  errors.py  lists.py  models.py  regex.py  strings.py  templates.py  types.py
python/beeai_framework/workflows/: __init__.py  agent.py  errors.py  events.py  types.py  workflow.py
python/beeai_framework/workflows/agent/: __init__.py  agent.py
python/cz_commitizen/: __init__.py  monorepo_commits.py
python/docs/: _sidebar.md  agents.md  backend.md  beeai.md  cache.md  emitter.md  errors.md  events.md  index.html  instrumentation.md  integrations.md  logger.md  memory.md  searxng-tool.md  serialization.md  sql-tool.md  templates.md  tools.md  tutorials.md  version.md  workflows.md
python/examples/: README.md  basic.py  llms.py  requirements.txt
python/examples/agents/: bee.py  bee_advanced.py  custom_agent.py  granite.py  react.py  react_advanced.py  requirements.txt  simple.py  tool_calling.py
python/examples/agents/experimental/: human.py  remote.py
python/examples/backend/: chat.py  chat_stream.py  structured.py  tool_calling.py
python/examples/backend/providers/: amazon_bedrock.py  anthropic.py  azure_openai.py  groq.py  ollama.py  openai_example.py  vertexai.py  watsonx.py  xai.py
python/examples/cache/: custom.py  llm_cache.py  sliding_cache.py  tool_cache.py  unconstrained_cache.py  unconstrained_cache_function.py
python/examples/emitter/: advanced.py  agent_matchers.py  base.py  matchers.py  piping.py
python/examples/errors/: base.py  cast.py  tool.py
python/examples/helpers/: io.py
python/examples/integrations/: langgraph_example.py
python/examples/logger/: agent.py  base.py
python/examples/memory/: agentMemory.py  agent_memory.py  base.py  custom.py  llmMemory.py  llm_memory.py  slidingMemory.py  sliding_memory.py  summarizeMemory.py  summarize_memory.py  tokenMemory.py  token_memory.py  unconstrainedMemory.py  unconstrained_memory.py
python/examples/notebooks/: README.md  agents.ipynb  basics.ipynb  requirements.txt  watsonx.ipynb  workflows.ipynb
python/examples/observability/: simple_observe.py  simple_on.py
python/examples/runners/: basic_runner.py
python/examples/templates/: agent_sys_prompt.py  arrays.py  basic_functions.py  basic_template.py  forking.py  functions.py  objects.py  system_prompt.py
python/examples/tools/: advanced.py  agent.py  base.py  decorator.py  duckduckgo.py  langchain.py  langchain_tool.py  mcp_agent.py  mcp_slack_agent.py  mcp_tool_creation.py  openapi.py  openmeteo.py  python_tool.py  wikipedia.py
python/examples/tools/custom/: base.py  openlibrary.py  sandbox.py
python/examples/workflows/: advanced.py  emitter.py  memory.py  multi_agents.py  multi_agents_simple.py  nesting.py  remote.py  searx_agent.py  simple.py  travel_advisor.py  web_agent.py
python/scripts/: absolute_links.py  copyright.sh
python/tests/: conftest.py  errors_test.py  test_custom_logger.py  test_retryable.py
python/tests/backend/: test_chatmodel.py  test_message.py
python/tests/cache/: test_null_cache.py  test_sliding_cache.py  test_unconstrained_cache.py
python/tests/examples/: test_examples.py
python/tests/parsers/: line_prefix_test.py
python/tests/runners/: test_default_runner.py
python/tests/templates/: test_templates.py
python/tests/tools/: test_decorator.py  test_duckduckgo.py  test_emitter.py  test_mcp_tool.py  test_opemmeteo.py  test_python.py  test_sandbox.py  test_wikipedia.py
python/tests/utils/: test_cloneable.py  test_custom_logger.py  test_json_schema.py
python/tests/workflows/: test_multi_agents.py  test_workflow.py  test_workflow_nav.py
(+292 files in other folders)
