[project]
name = "beeai-framework"
version="0.1.11"
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
maintainers = [
    { name = "Alex Bozarth", email = "ajbozart@us.ibm.com" },
    { name = "Akihiko Kuroda", email = "akuroda@us.ibm.com" },
    { name = "Angelo Danducci", email = "angelo.danducci.ii@ibm.com" },
    { name = "Graham White", email = "gwhite@uk.ibm.com" },
    { name = "Michael Desmond", email = "michael.desmond@gmail.com" },
    { name = "Nigel Jones", email = "jonesn@uk.ibm.com" },
    { name = "Lukáš Janeček", email = "xjacka@gmail.com" },
    { name = "Prattyush Mangal", email = "prattyush.mangal@ibm.com" },
    { name = "Tomas Dvorak", email = "toomas2d@gmail.com" },
    { name = "Va Barbosa", email = "va@us.ibm.com" },
]
requires-python = ">=3.11,<4.0"

[project.urls]
homepage = "https://iambee.ai"
repository = "https://github.com/i-am-bee/beeai-framework"
documentation = "https://i-am-bee.github.io/beeai-framework/#/python/"

[tool.poetry.dependencies]
python = ">= 3.11,<4.0"
pydantic = "^2.10"
requests = "^2.32"
chevron = "^0.14.0"
litellm = "^1.63.14"
aiofiles = "^24.1.0"
mcp = "^1.2.0"
duckduckgo-search = "^7.5.1"
json-repair = "^0.39.0"
wikipedia-api = "^0.8.1"
langchain-core = {version = "^0.3.41", optional = true}
langchain-community = {version = "^0.3.19", optional = true}
boto3 = {version = "^1.37.5", optional = true}
acp-sdk = "^0.0.5"
cachetools = "^5.5.2"
jsonref = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
commitizen = "^4.2.1"
poethepoet = "^0.32.2"
ruff = "^0.9.6"
pydantic-settings = "^2.7"
tox = "^4.20"
mypy = "^1.15.0"
pylint = "^3.3.2"
pytest-asyncio = "^0.25.3"
nbstripout = "^0.8.1"
pytest-cov = "^6.0.0"
types-chevron = "^0.14.2.20250103"
types-requests = "^2.32.0.20241016"
types-cachetools = "^5.5.0.20240820"

[tool.poetry.extras]
langchain = ["langchain-core", "langchain-community"]
huggingface = ["datasets", "transformers"]


[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/beeai_framework"
exclude = "^build/$"
check_untyped_defs = true
plugins = ["pydantic.mypy"]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.commitizen]
name = "cz_monorepo_commits"
tag_format = "python_v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
bump_message = "chore: python release $new_version"

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report html"
testpaths = ["tests", "beeai_framework"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit",
    "integration",
    "e2e",
    "extension"
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = "ignore::DeprecationWarning:pydantic" # some dependencies still use the deprecated class-based config

[tool.pytest-asyncio]
asyncio_mode = "strict"
default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover", # re-enable the standard pragma
    "pass",             # Skip any pass lines such as may be used for @abstractmethod
]

[tool.poe.tasks.clean]
help = "Remove all artifacts and builds"
sequence = [
    { script = "shutil:rmtree('build/', ignore_errors=1)"},
    { script = "shutil:rmtree('dist/', ignore_errors=1)"}
]

[tool.poe.tasks.build]
help = "Build a package"
cmd = "poetry build"

[tool.poe.tasks.commit]
help = "Creates a commit"
cmd = "cz commit -- --signoff"

[tool.poe.tasks.format]
help = "Run all formating tools"
control.expr = "fix"
args = [
    { name = "TARGET", positional = true, multiple = true },
    { name = "fix", options = ["--fix"], type = "boolean", help = "Apply fixes instead of checking" }
]
uses = { PY_FILES = "_match_files --ext py|ipynb $TARGET" }

    [[tool.poe.tasks.format.switch]]
        case = "True"
        cmd = "ruff format ${PY_FILES}"

    [[tool.poe.tasks.format.switch]]
        cmd = "ruff format --check ${PY_FILES}"

[tool.poe.tasks.lint]
help = "Check for errors and fix them using ruff"
args = [
    { name = "TARGET", positional = true, multiple = true },
    { name = "FIX", options = ["--fix"], type = "boolean", help = "Apply fixes instead of checking" }
]
uses = { PY_FILES = "_match_files --ext py|ipynb $TARGET" }
cmd = "ruff check ${FIX:+--fix} ${PY_FILES}"

[tool.poe.tasks.git]
control.expr = "hook"
args = ["hook", { name = "TARGET", positional = true, multiple = true }]
default = "pass"

    [[tool.poe.tasks.git.switch]]
    case = "commit-msg"
    shell = "cz check --allow-abort --commit-msg-file $TARGET"

    [[tool.poe.tasks.git.switch]]
    case = "pre-commit"
    sequence = [
        { "ref" = "copyright ${TARGET}"},
        { "ref" = "format --fix ${TARGET}"},
        { "ref" = "lint --fix ${TARGET}" },
        { "ref" = "type-check ${TARGET}" },
        { "ref" = "docs --type check"},
        { "ref" = "copyright --type check ${TARGET}"},
    ]

[tool.poe.tasks.docs]
help = "Documentation related commands"
control.expr = "type"
args = ["type"]

    [[tool.poe.tasks.docs.switch]]
    case = "build"
    help = "Update sources for the documentation"
    sequence = [
        { shell = "npx --yes embedme --source-root=. docs/**/*.md" },
        { "ref" = "format --fix docs"},
        { "ref" = "lint --fix docs" },
        { "shell" = "git add -u docs" }
    ]

    [[tool.poe.tasks.docs.switch]]
    case = "check"
    help = "Update sources for the documentation"
    sequence = [
        { shell = "npx --yes embedme --source-root=. docs/**/*.md --verify" },
    ]

    [[tool.poe.tasks.docs.switch]]
    case = "watch"
    help = "Open docs web dev mode"
    shell = "npx --yes docsify-cli serve ./docs --open"

[tool.poe.tasks.copyright]
help = "Copyright headers"
args = [{ name = "TARGET", positional = true, multiple = true }, { name = "type", options = ["--type"], default = "add" }]
cwd = "."
shell = "TYPE=${type} ./scripts/copyright.sh"

[tool.poe.tasks.release]
help = "Release a new version"
sequence = [
    { shell = 'git fetch origin && [ "$(git rev-parse @)" = "$(git rev-parse @{u})" ] || { echo "Your branch is not up to date! Pull or push changes." && exit 1; }' },
    { shell = '[ -z "$(git status -uno --porcelain)" ] || { echo "Your index contains uncommitted changes! Commit them and try again." && exit 1; }' },
    { "ref" = "clean"},
    { "cmd" = "cz bump --increment PATCH"},
    { "script" = "scripts.absolute_links:update('README.md')"},
    { "cmd" = "poetry publish --build" },
    { "shell" = "git add README.md >/dev/null && git checkout HEAD README.md >/dev/null" },
    { "shell" = "git push && git push origin $(git describe --tags --exact-match)"}
]

[tool.poe.tasks.test]
args = ["type"]
control.expr = "type"

    [[tool.poe.tasks.test.switch]]
    case = "unit"
    help = "Run Unit Tests"
    cmd = "pytest -m 'unit'"

    [[tool.poe.tasks.test.switch]]
    case = "integration"
    help = "Run Integration Tests"
    cmd = "pytest -m 'integration' tests/integration"

    [[tool.poe.tasks.test.switch]]
    case = "extension"
    help = "Run Extension Tests"
    cmd = "pytest -m 'integration'"

    [[tool.poe.tasks.test.switch]]
    case = "e2e"
    help = "Run E2E Tests"
    cmd = "pytest -m 'e2e'"

    [[tool.poe.tasks.test.switch]]
    help = "Run All Tests"
    cmd = "pytest"

[tool.poe.tasks._match_files]
help = "Extract files by their extension"
args = [
    { name = "TARGET", positional = true, multiple = true },
    { name = "EXTENSION", options = ["--ext"] }
]
shell = "printf '%s\\n' $TARGET | grep -E \"\\.(${EXTENSION})$\" | tr '\\n' ' '"

[tool.poe.tasks.type-check]
help = "Static Type Checker with optional flags"
args = [
    { name = "TARGET", positional = true, multiple = true, default = "." }
]
uses = { PY_FILES = "_match_files --ext py $TARGET" }
cmd = "mypy ${PY_FILES:-.} ${POE_ARGS}"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."commitizen.plugin"]
cz_monorepo_commits = "cz_commitizen:MonorepoCommitsCz"

[tool.ruff]
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade
    "I",     # isort
    "B",     # bugbear
    "ANN",   # annotations
    "N",     # pep8-naming
    "C4",    # Comprehensions
    "DTZ",   # DatetimeZ
    "Q",     # Quotes
    "SIM",   # Simplify
    "RUF",   # Ruff
    "TID",   # tidy-imports
    "ASYNC", # async
]
force-exclude = true
lint.ignore = ["ANN401", "B904"]
lint.fixable = ["ALL"]
lint.unfixable = []
line-length = 120

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports, "parents" | "all"
ban-relative-imports = "all"
